[package]
name = "sr-proto"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "protobufs, cmdid."
repository = "https://github.com/yuvlian/sr-proto"
readme = "README.md"

[dependencies]
prost = "0.13.4"
prost-types = "0.13.4"

[build-dependencies]
prost-build = "0.13.4"
regex = "1.11.1"
heck = "0.5.0"
